--- a/4-natours/package.json
+++ b/4-natours/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mongoose": "^5.13.21",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
