--- a/4-natours/config.env
+++ b/4-natours/config.env
@@ -1,2 +1,4 @@
 NODE_PORT = 3000
 DATABASE = mongodb://tian:123456@127.0.0.1:27017/natours
+JWT_SECRET = 4740f6ed-57d1-4f20-a4c9-9ab83f57d748
+JWT_EXPIRES_IN  = 90d
